--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ header a {
     /* background-color: #bed5ff; */
     /* background:  */
     background: linear-gradient(180deg, #c4e2fd 0%, #6697f4 100%);
+    overflow: hidden;
 }
 
 img.cards-bg  {
@@ -817,8 +818,8 @@ img#qr-code {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-color: #0087f9;
     color: white;
     border: 2px solid #0087f9;
