--- a/styles.css
+++ b/styles.css
@@ -280,7 +280,7 @@ p.cta-desc {
     border: none;
     /* background: rgba(0, 0, 0, 0.6); */
     background: rgba(32, 32, 32, 0.315);
-    border: 2px solid rgba(133, 132, 132, 0.6);
+    border: 2px solid rgb(255 254 254 / 60%);
     color: rgba(255, 255, 255, 0.632);
     /* color: white;   */
     font-size: 40px;
