--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ p.cta-desc {
 
 .cta-button {
     display: inline-block;
-    margin: 20px auto;
+    margin: 20px 0 10px;
     padding: 10px 20px;
     background: #0087f9;
     background: #badbfc;
@@ -1225,7 +1225,7 @@ img#qr-code {
     .cta-button {
         font-size: 1rem;
         padding: 6px 15px;
-        margin: 15px 0;
+        margin: 10px 0;
     }
 }
 
@@ -1248,6 +1248,10 @@ img#qr-code {
         padding-left: 0;
     }
     
+    .carousel-title {
+        padding: 4px 0;
+    }
+
     .card-content {
         max-height: 200px;
         height: 100%;
@@ -1279,12 +1283,6 @@ img#qr-code {
     .cta-button {
         margin: 10px 0;
     }
-
-/* 
-    .modal-content {
-        max-width: 100vw;
-        height: auto;
-    } */
 
     .card p {
         font-size: .8rem;
