--- a/styles.css
+++ b/styles.css
@@ -408,12 +408,13 @@ p.cta-desc {
 .modal .card {
     max-width: 400px;
     width: 100%;
+    padding: 10px;
 }
 
 .card-content {
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     width: 100%;
-    padding: 0 10px;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -619,6 +620,10 @@ img.spotlight-logo {
     background-color: rgba(255, 115, 0, 0.593);
     background-color: rgba(0, 0, 0, 0);
     background-color: red;
+    border-radius: 10px;
+}
+
+.modal-content img {
     border-radius: 10px;
 }
 
