--- a/styles.css
+++ b/styles.css
@@ -361,7 +361,7 @@ p.cta-desc {
     justify-content: center;
     align-items: center;
     max-width: 500px;
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     /* border: 2px solid #3a79ee; */
     border-radius: 10px;
